--- a/src/components/SoloGame.module.css
+++ b/src/components/SoloGame.module.css
@@ -45,11 +45,12 @@
 
 .controlsArea {
   flex-shrink: 0;
-  min-height: 68px;
+  height: 68px;
   padding-bottom: env(safe-area-inset-bottom, 0px);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  overflow: visible;
 }
 
 .phaseContent {
